argocd/applications/monitoring/falco/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco
  namespace: falco
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
  tls:
    - hosts:
        - "falco"
